--- a/_posts/2013-06-20-kiva.md
+++ b/_posts/2013-06-20-kiva.md
@@ -12,6 +12,7 @@ abstract:
     Our in-depth analysis of a kiva.com shows that lenders appear to lend more to highly rated institutions, and with what appears to be better planned lending decisions; and that smaller, homogeneous teams seem to drive more lending activity and to achieve larger team lending agreements.
 bullets:
 |
+    - ICWSM 2015
 publications:
     ICWSM-2015:
         image: /images/kiva/Community-based_savings_bank_in_Cambodia.jpg
