--- a/_posts/2013-06-20-kiva.md
+++ b/_posts/2013-06-20-kiva.md
@@ -9,7 +9,7 @@ alias: /work/stonesoup/
 tags: Data Mining, ICTD, Micro-finance
 abstract:
 |
-    Our in-depth analysis of a kiva.com shows that lenders appear to lend more to highly rated institutions, and with what appears to be better planned lending decisions; and that smaller, homogeneous teams seem to drive more lending activity and to achieve larger team lending agreements.
+    In-depth analysis of a kiva.com lending activity.
 bullets:
 |
     - [ICWSM 2015]
