--- a/_posts/2013-06-20-kiva.md
+++ b/_posts/2013-06-20-kiva.md
@@ -12,7 +12,7 @@ abstract:
     In-depth analysis of a kiva.com lending activity.
 bullets:
 |
-    - [ICWSM 2015]
+    - [[ICWSM 2015]](/files/kiva_icwsm'15.pdf) [[arXiv]](https://arxiv.org/abs/1609.09571)
 publications:
     ICWSM-2015:
         image: /images/kiva/Community-based_savings_bank_in_Cambodia.jpg
@@ -26,6 +26,7 @@ publications:
             <br />
             ICWSM 2015
             <br />
+            \[[pdf](/files/kiva_icwsm'15.pdf)\]
 ---
 
 Microfinance institutions focus on providing financial services for low-income citizens who typically lack access to traditional banking systems. In recent years there has been a significant growth in the number of online microlending sites that connect lenders to microfinance institutions and individuals that require funding. Although traditional (offline) microfinance has been widely studied, there exist many open questions regarding lending behaviors when the activity is carried online. We present an in-depth analysis of the relationship between the information that lenders can explore in an online microlending platform and the lending activity it generates. Specifically, we carry out our analysis on the Kiva platform and focus on three important features: ratings of the microfinance institutions, loan characteristics and lending teams. Our results show, among others, that lenders appear to lend more to highly rated institutions, and with what appears to be better planned lending decisions; and that smaller, homogeneous teams seem to drive more lending activity and to achieve larger team lending agreements.
