--- a/_posts/2008-02-20-edugrid.md
+++ b/_posts/2008-02-20-edugrid.md
@@ -4,10 +4,10 @@ category: academic
 featured: false
 thumbnail: /images/AIGA/architecture.png
 alias: /work/interactive-dvd/
-tags: Parallel Computing, Education
+tags: Parallel Computing, Education, Engineer
 abstract:
 |
-    We present a Grid based application which works in collaboration with natural language processing (NLP), to act as a virtual assistant. The application can answer queries in a conversational manner and is capable of being deployed in various scenarios. 
+    AIGA is a Grid based application which works in collaboration with natural language processing (NLP), to act as a virtual assistant. The application can answer queries in a conversational manner.
 bullets:
 |
     - [[HIPC 2007]](http://www.hipc.org/hipc2007/posters/AIGA.pdf)
