--- a/_posts/2013-06-20-kiva.md
+++ b/_posts/2013-06-20-kiva.md
@@ -1,12 +1,11 @@
 ---
 title: "The Role of Rating and Loan Characteristics in Online Microfunding Behaviors"
 category: other
-tags: Data Mining, ICTD, HCI
 featured: true
+tags: Data-Scientist, HCI-Researcher
 thumbnail: "/images/kiva/Community-based_savings_bank_in_Cambodia.jpg"
 image-title: '"Community-based savings bank in Cambodia" by Brett Matthews - Own work. Licensed under Creative Commons Attribution-Share Alike 3.0 via Wikimedia Commons - http://commons.wikimedia.org/wiki/File:Community-based_savings_bank_in_Cambodia.jpg#mediaviewer/File:Community-based_savings_bank_in_Cambodia.jpg'
 alias: /work/stonesoup/
-tags: Data Mining, ICTD, Micro-finance
 abstract:
 |
     In-depth analysis of a kiva.com lending activity.
