--- a/_posts/2008-02-20-edugrid.md
+++ b/_posts/2008-02-20-edugrid.md
@@ -25,8 +25,9 @@ publications:
             [Shubham Malhotra][sm]
             <br />
             HIPC 2007
-            <br />
-            \[[pdf](http://www.hipc.org/hipc2007/posters/AIGA.pdf)\]
+        file:
+        |
+            http://www.hipc.org/hipc2007/posters/AIGA.pdf
 ---
 
 AIGA is a Grid based application which works in collaboration with natural language processing (NLP), to act as a virtual teacher. The application can answer queries in a conversational manner and is capable of being deployed in various scenarios. We also created a working model of our system, deploying various existing frameworks as our sub-systems. The design won the national runner-up prize at the Software Design Invitational (Theme:Education), Microsoft's Imagine Cup, 2007.
