--- a/_posts/2016-05-20-ESM.md
+++ b/_posts/2016-05-20-ESM.md
@@ -6,7 +6,7 @@ alias: /work/esm/
 tags: Engineer, HCI-Researcher
 abstract:
 |
-    An experimental swarm light installation exploring a network for collective action.
+    Mobile and situated crowdsourcing to collect annotated travel activity data in real-word settings.
 publications:
     IJHCS-2016:
         image: /images/esm/cover-square.png
