Added my interests toggle

--- a/_posts/2008-02-20-edugrid.md
+++ b/_posts/2008-02-20-edugrid.md
@@ -4,7 +4,7 @@ category: academic
 featured: false
 thumbnail: /images/AIGA/architecture.png
 alias: /work/interactive-dvd/
-tags: Parallel Computing, Education, Engineer
+tags: Parallel Computing, Education, Engineer, ICTD, AI
 abstract:
 |
     AIGA is a Grid based application which works in collaboration with natural language processing (NLP), to act as a virtual assistant. The application can answer queries in a conversational manner.
