--- a/_posts/2016-01-20-IOSHOE.md
+++ b/_posts/2016-01-20-IOSHOE.md
@@ -3,7 +3,7 @@ title: "Internet of Shoes"
 featured: true
 thumbnail: /images/ioshoe/cover-square.png
 alias: /work/ioshoe/
-tags: Engineer, Designer, Art, IOT
+tags: Engineer, Designer, Art, IOT, Ubicomp
 abstract:
 |
     An experimental swarm light installation exploring a network for collective action.
