--- a/_posts/2016-05-10-Sophus.md
+++ b/_posts/2016-05-10-Sophus.md
@@ -3,7 +3,7 @@ title: "Sophus App"
 featured: true
 thumbnail: /images/sophus/cover.png
 alias: /work/esm/
-tags: Engineer, Designer
+tags: Engineer, Designer, Social, CSCW
 abstract:
 |
         Context-Aware Knowledge Sharing Platform
