--- a/_posts/2016-05-20-ESM.md
+++ b/_posts/2016-05-20-ESM.md
@@ -3,7 +3,7 @@ title: "Mobile Crowdsourcing for Experience Sampling"
 featured: true
 thumbnail: /images/esm/cover-square.png
 alias: /work/esm/
-tags: Engineer, HCI-Researcher
+tags: Engineer, HCI-Researcher, Ubicomp, IOT
 abstract:
 |
     Mobile and situated crowdsourcing to collect annotated travel activity data in real-word settings.
