--- a/_posts/2016-05-10-Sophus.md
+++ b/_posts/2016-05-10-Sophus.md
@@ -7,7 +7,7 @@ tags: Engineer, Designer, Social-Computing, CSCW
 abstract:
 |
         Context-Aware Knowledge Sharing Platform
-publications:
+awards:
     ExpoSItion-2016:
         image: /images/sophus/cover.png
         info: 
