--- a/_posts/2017-04-20-HEED.md
+++ b/_posts/2017-04-20-HEED.md
@@ -3,7 +3,7 @@ title: "HEED Self-Reporting Devices"
 featured: true
 thumbnail: /images/heed/device1.png
 alias: /work/heed/
-tags: Engineer, HCI-Researcher, Ubicomp, IOT
+tags: Engineer, HCI-Researcher, Designer, Ubicomp, IOT
 abstract:
 |
     I designed and developed situated and distributed interactive devices for self-reporting.
