--- a/_posts/2016-05-10-Sophus.md
+++ b/_posts/2016-05-10-Sophus.md
@@ -6,7 +6,7 @@ alias: /work/esm/
 tags: Engineer, Designer, Social-Computing, CSCW
 abstract:
 |
-        Context-Aware Knowledge Sharing Platform
+        Context-Aware Knowledge Sharing Platform that allows people nearby to leverage each other's expertise.
 awards:
     ExpoSItion-2016:
         image: /images/sophus/cover.png
