--- a/_posts/2017-04-20-HEED.md
+++ b/_posts/2017-04-20-HEED.md
@@ -6,7 +6,7 @@ alias: /work/heed/
 tags: Engineer, HCI-Researcher, Designer, Ubicomp, IOT
 abstract:
 |
-    Situated and distributed interactive devices for simple one-touch self-reporting in most visited locations.
+    Situated and distributed interactive devices for simple one-touch self-reporting targetting the most common situations.
 publications:
     UbiComp-2017 Poster:
         image: /images/heed/device1.png
