--- a/_posts/2017-04-20-HEED.md
+++ b/_posts/2017-04-20-HEED.md
@@ -25,7 +25,11 @@ publications:
             <br />
         file:
         |   
-            /files/heed.pdf
+            /files/heed.
+    Code:
+        file:
+        |   
+            https://github.com/gparuthi/BLE_ESM
 ---
 
 In situ self-reporting is a widely used technique in HCI, ubiquitous computing, especially for assessment and intervention in health and wellness. Although, smartphones are widely used for self-reporting, there is an opportunity to design dedicated, unobtrusive and distributed self-reporting devices that improve the coverage of sampled experiences. We designed self-reporting devices for two scenarios of reporting- Activities and Stress/Sleepiness. The devices were placed by the users in their surroundings for ease of access. We show that the devices are useful especially in certain situations such as when the user is engaged in focus work. Moreover, we show that the preference of phone or devices to self-report varied between users based on multiple factors such as their engagement with phone and their preferences about being surrounded by multiple devices.
