--- a/_posts/2016-05-10-Sophus.md
+++ b/_posts/2016-05-10-Sophus.md
@@ -7,6 +7,11 @@ tags: Engineer, Designer, Social-Computing, CSCW
 abstract:
 |
         Context-Aware Knowledge Sharing Platform that allows people nearby to leverage each other's expertise.
+publications:
+    Code:
+        file:
+        |   
+            https://github.com/gparuthi/RiotLocationChatWebApp
 awards:
     ExpoSItion-2016:
         image: /images/sophus/cover.png
@@ -46,5 +51,5 @@ Here is a short video of how it works:
 <hr>
 ## Code 
 
-[Here](https://github.com/Sophusapp/RiotLocationChatWebApp) is the code for the the web version of our application. 
+[Here](https://github.com/gparuthi/RiotLocationChatWebApp) is the code for the the web version of our application. 
 
