--- a/_posts/2017-08-20-GUI.md
+++ b/_posts/2017-08-20-GUI.md
@@ -16,4 +16,52 @@ publications:
 
 Prototype for SmartCity Project about detecting anomalies in people's commute to reduce uncertainty. We used computer vision and other APIs to notify users at the right time. For example, when there are too many people at the subway station and trains are too crowded, we may alert a user who might be thinking about taking the subway. This way users can think about alternative ways like taking an Uber or bike.
 
+## System Design
+<div style="text-align:center">
+    <figure style="display: inline-block">
+        <img width="600px" src="/images/gui/Architecture.png" >
+        <figcaption style="text-align:center">System Architecture of GUI App</figcaption>
+    </figure>
+</div>
+<br/>
+
+
+## GUI Mobile App
+<div style="text-align:center">
+    <figure style="display: inline-block">
+        <img width="200px" src="/images/gui/onboarding.png" >
+        <figcaption style="text-align:center">GUI app onboarding screen</figcaption>
+    </figure>
+    <figure style="display: inline-block">
+        <img width="200px" src="/images/gui/commute-overview.png" >
+        <figcaption style="text-align:center">Overview of the commute</figcaption>
+    </figure>
+    <figure style="display: inline-block">
+        <img width="200px" src="/images/gui/anomaly.png" >
+        <figcaption style="text-align:center">Push notification for anomalies during commute</figcaption>
+    </figure>
+</div>
+
+<br/>
+
+## Computer Vision to detect anomalies
+<div style="text-align:center">
+    <figure style="display: inline-block">
+        <img width="600px" src="/images/gui/computer-vision.png" >
+        <figcaption style="text-align:center">Computer vision to detect anomalies such as over-crowded buses and trains</figcaption>
+    </figure>
+</div>
+
+<br/>
+
+## Team
+<div style="text-align:center">
+    <figure style="display: inline-block">
+        <img width="600px" src="/images/gui/team.png" >
+        <figcaption style="text-align:center"></figcaption>
+    </figure>
+</div>
+<br/>
+
+## Code
 The code can be found [here](https://github.com/gparuthi/IDEO-Colab-GUI-Prototype).
