--- a/_posts/2016-05-10-Sophus.md
+++ b/_posts/2016-05-10-Sophus.md
@@ -7,11 +7,6 @@ tags: Engineer, Designer, Social-Computing, CSCW
 abstract:
 |
         Context-Aware Knowledge Sharing Platform that allows people nearby to leverage each other's expertise.
-publications:
-    Code:
-        file:
-        |   
-            https://github.com/gparuthi/RiotLocationChatWebApp
 awards:
     ExpoSItion-2016:
         image: /images/sophus/cover.png
@@ -21,6 +16,11 @@ awards:
         file:
         |
             https://www.si.umich.edu/icareers/students-and-alumni/career-fairs-and-exposition/2016-exposition-award-winners
+code:
+    Code:
+        file:
+        |   
+            https://github.com/gparuthi/RiotLocationChatWebApp
 
 
 
