--- a/_posts/2017-08-20-GUI.md
+++ b/_posts/2017-08-20-GUI.md
@@ -7,7 +7,7 @@ tags: Engineer, HCI-Researcher, Designer, Ubicomp, IOT
 abstract:
 |
     Prototype for SmartCity Project @IDEOColab about detecting anomalies in people's commute to reduce uncertainty.
-publications:
+code:
     Code:
         file:
         |   
