--- a/_posts/2017-04-20-HEED.md
+++ b/_posts/2017-04-20-HEED.md
@@ -35,3 +35,59 @@ code:
 ---
 
 In situ self-reporting is a widely used technique in HCI, ubiquitous computing, especially for assessment and intervention in health and wellness. Although, smartphones are widely used for self-reporting, there is an opportunity to design dedicated, unobtrusive and distributed self-reporting devices that improve the coverage of sampled experiences. We designed self-reporting devices for two scenarios of reporting- Activities and Stress/Sleepiness. The devices were placed by the users in their surroundings for ease of access. We show that the devices are useful especially in certain situations such as when the user is engaged in focus work. Moreover, we show that the preference of phone or devices to self-report varied between users based on multiple factors such as their engagement with phone and their preferences about being surrounded by multiple devices.
+
+<div style="text-align:center">
+    <figure style="display: inline-block">
+        <img width="600px" src="/images/heed/use-of-heed.png" >
+        <figcaption style="text-align:center">Heed self-reporting devices placed in participant's environment. (left) On a desk where the participant usually works, (right) Stuck on the wall in a frequently accessed area in a participant's kitchen.</figcaption>
+    </figure>
+</div>
+<br/>
+
+## System Design
+
+Heed devices are to be located in the most visited spaces of the user. Moreover, the form of a Heed device must evoke a sense of duty to report; yet, being a physical part of user's décor, it must not stand out. Such opposing intentions directed our initial exploration of materials and the physical design of Heed such that a sweet spot might be found where the devices were neither too ambient nor too distracting. Each device was intended to be placed in a location of the user's choice. This constrained our design to a device that must run continuously, without needing the user to charge it, for the duration of the study. Furthermore, we designed the device to sync with the user's smartphone via Bluetooth for two reasons: a) it allows the device to trigger notifications only when the user is nearby and b) it allows the device to sync in real time, thus avoiding unnecessary lag.
+
+<div style="text-align:center">
+    <figure style="display: inline-block">
+        <img width="600px" src="/images/heed/prototypes.png" >
+        <figcaption style="text-align:center">(Left) Individual components of each device laid out. (Right) Final devices</figcaption>
+    </figure>
+</div>
+
+<br/>
+
+<div style="text-align:center">
+    <figure style="display: inline-block">
+        <img width="600px" src="/images/heed/interaction.png" >
+        <figcaption style="text-align:center">User Interaction</figcaption>
+    </figure>
+</div>
+
+<br/>
+
+<div style="text-align:center">
+    <figure style="display: inline-block">
+        <img width="600px" src="/images/heed/architecture.png" >
+        <figcaption style="text-align:center">System Architecture of the Heed system</figcaption>
+    </figure>
+</div>
+
+<br/>
+
+## Real-world Study
+
+The design process outlined above culminated in two one-week-long studies, one with 10 and the other with 7 externally recruited participants. Participants reported their Activities and Social situation in Study 1, and Stress and Sleepyness levels in Study 2.
+
+<div style="text-align:center">
+    <figure style="display: inline-block">
+        <img width="600px" src="/images/heed/study-details.png" >
+        <figcaption style="text-align:center">Study Details</figcaption>
+    </figure>
+</div>
+
+
+
+Findings from the study and design space exploration are under review currently. 
+
+Code can be found [here](https://github.com/gparuthi/BLE_ESM).
