--- a/_posts/2017-08-20-GUI.md
+++ b/_posts/2017-08-20-GUI.md
@@ -1,5 +1,5 @@
 ---
-title: "GUI"
+title: "Simplifying Commute by Predicting Obstacles"
 featured: true
 thumbnail: /images/gui/logo.svg
 alias: /work/heed/
@@ -14,19 +14,8 @@ code:
             https://github.com/gparuthi/IDEO-Colab-GUI-Prototype
 ---
 
-Prototype for SmartCity Project about detecting anomalies in people's commute to reduce uncertainty. We used computer vision and other APIs to notify users at the right time. For example, when there are too many people at the subway station and trains are too crowded, we may alert a user who might be thinking about taking the subway. This way users can think about alternative ways like taking an Uber or bike.
+Prototype for SmartCity Project about detecting obstacles in people's commute to reduce uncertainty. We used computer vision and other APIs to notify users at the right time. For example, when there are too many people at the subway station and trains are too crowded, we may alert a user who might be thinking about taking the subway. This way users can think about alternative ways like taking an Uber or bike. The project may have a strong use case for mobility impaired individuals for whom even minor incidents can have a significant impact on their commute [[1](https://www.youtube.com/watch?v=UO9hUFed5Wo&t=1025s),[2](http://www.bbc.com/news/av/uk-35273033/the-challenges-faced-by-disabled-commuters)].
 
-## System Design
-<div style="text-align:center">
-    <figure style="display: inline-block">
-        <img width="600px" src="/images/gui/Architecture.png" >
-        <figcaption style="text-align:center">System Architecture of GUI App</figcaption>
-    </figure>
-</div>
-<br/>
-
-
-## GUI Mobile App
 <div style="text-align:center">
     <figure style="display: inline-block">
         <img width="200px" src="/images/gui/onboarding.png" >
@@ -42,6 +31,17 @@ Prototype for SmartCity Project about detecting anomalies in people's commute to
     </figure>
 </div>
 
+
+## Process
+Our design process started from understanding the notion of Smart Cities. We talked to experts about existing projects to learn more about the shortcomings and advantages of using technologies in this space. While narrowing down the scope, we **developed multiple prototypes** and simultaneously conducted **user research** to build empathy with our end users (commuters). Finally, I leveraged my technical expertise with **Javascript** and **Machine Learning** to develop working prototypes of our ideas that we presented to our stakeholders.
+
+## System Design
+<div style="text-align:center">
+    <figure style="display: inline-block">
+        <img width="600px" src="/images/gui/Architecture.png" >
+        <figcaption style="text-align:center">System Architecture of GUI App</figcaption>
+    </figure>
+</div>
 <br/>
 
 ## Computer Vision to detect anomalies
