--- a/_posts/2017-08-20-GUI.md
+++ b/_posts/2017-08-20-GUI.md
@@ -57,7 +57,7 @@ Our design process started from understanding the notion of Smart Cities. We tal
 ## Team
 <div style="text-align:center">
     <figure style="display: inline-block">
-        <img width="600px" src="/images/gui/team.png" >
+        <img width="600px" src="/images/gui/gui-team.png" >
         <figcaption style="text-align:center"></figcaption>
     </figure>
 </div>
