added phone app design

--- a/_posts/2017-04-20-HEED.md
+++ b/_posts/2017-04-20-HEED.md
@@ -73,6 +73,13 @@ Heed devices are to be located in the most visited spaces of the user. Moreover,
     </figure>
 </div>
 
+<div style="text-align:center">
+    <figure style="display: inline-block">
+        <img width="600px" src="/images/heed/phone-app.png" >
+        <figcaption style="text-align:center">System Architecture of the Heed system</figcaption>
+    </figure>
+</div>
+
 <br/>
 
 ## Real-world Study
