--- a/_posts/2017-04-20-HEED.md
+++ b/_posts/2017-04-20-HEED.md
@@ -76,7 +76,7 @@ Heed devices are to be located in the most visited spaces of the user. Moreover,
 <div style="text-align:center">
     <figure style="display: inline-block">
         <img width="600px" src="/images/heed/phone-app.png" >
-        <figcaption style="text-align:center">System Architecture of the Heed system</figcaption>
+        <figcaption style="text-align:center">Heed Mobile App</figcaption>
     </figure>
 </div>
 
