--- a/_posts/2017-04-20-HEED.md
+++ b/_posts/2017-04-20-HEED.md
@@ -97,4 +97,4 @@ The design process outlined above culminated in two one-week-long studies, one w
 
 Findings from the study and design space exploration are under review currently. 
 
-Code can be found [here](https://github.com/gparuthi/BLE_ESM).
+Code can be found [here](https://github.com/gparuthi/Heed-Self-Reporting-Devices).
