updated heed paper

--- a/_posts/2017-04-20-HEED.md
+++ b/_posts/2017-04-20-HEED.md
@@ -9,6 +9,25 @@ abstract:
     Situated and distributed interactive devices for simple one-touch self-reporting targetting the most common situations.
 
 publications:
+    IMWUT 2018:
+        image: /images/heed/device1.png
+        info:
+        |
+            **Heed: Exploring the Design of Situated Self-Reporting**
+            <br />
+            [Gaurav Paruthi][gp],
+            Shriti Raj,
+            Seungjoo Baek,
+            Chuyao Wang,
+            Chuan-che Huang,
+            Yung-ju Chang,
+            [Mark Newman][mwn]
+            <br /><br />
+            IMWUT 2018
+            <br />
+        file:
+        |   
+            /files/heed.
     UbiComp-2017 Poster:
         image: /images/heed/device1.png
         info:
