--- a/_posts/2017-04-20-HEED.md
+++ b/_posts/2017-04-20-HEED.md
@@ -27,7 +27,7 @@ publications:
             <br />
         file:
         |   
-            /files/heed.
+            /files/imwut2018-heed.pdf
     UbiComp-2017 Poster:
         image: /images/heed/device1.png
         info:
@@ -45,7 +45,7 @@ publications:
             <br />
         file:
         |   
-            /files/heed.
+            /files/heed.pdf
 code:
     Code:
         file:
