--- a/_posts/2017-08-20-GUI.md
+++ b/_posts/2017-08-20-GUI.md
@@ -46,7 +46,7 @@ Our design process started from understanding the notion of Smart Cities. We tal
 
 ## Computer Vision to detect anomalies
 <div style="text-align:center">
-    <figure st****yle="display: inline-block">
+    <figure style="display: inline-block">
         <img width="600px" src="/images/gui/computer-vision.png" >
         <figcaption style="text-align:center">Computer vision to detect anomalies such as over-crowded buses and trains</figcaption>
     </figure>
